tests/baselines/reference/duplicateVariablesWithAny.errors.txt
tests/cases/compiler/duplicateVariablesWithAny.ts(3,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '任意', but here has type '数字'.
tests/cases/compiler/duplicateVariablesWithAny.ts(6,5): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type '文字', but here has type '任意'.
tests/cases/compiler/duplicateVariablesWithAny.ts(10,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '任意', but here has type '数字'.
tests/cases/compiler/duplicateVariablesWithAny.ts(13,9): error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type '文字', but here has type '任意'.


==== tests/cases/compiler/duplicateVariablesWithAny.ts (4 errors) ====
    // They should have to be the same even when one of the types is 'any'
    var x: any;
    var x = 2; //error
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '任意', but here has type '数字'.
    
    var y = "";
    var y; //error
        ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type '文字', but here has type '任意'.
    
    module N {
        var x: any;
        var x = 2; //error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'x' must be of type '任意', but here has type '数字'.
    
        var y = "";
        var y; //error
            ~
!!! error TS2403: Subsequent variable declarations must have the same type.  Variable 'y' must be of type '文字', but here has type '任意'.
    }
    
    var z: any;
    var z; // ok